--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "vue": "^3.4.0",
     "axios": "^1.6.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "@microsoft/signalr": "^8.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
     "vite": "^5.0.0"
   }
 }
+
 
